[package]
name = "err-ctx"
version = "0.2.2"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Ralith/err-ctx"
description = "Contextual error reporting helpers"
keywords = ["error"]
categories = [ "command-line-interface" ]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
